--- a/public/register.css
+++ b/public/register.css
@@ -1,8 +1,37 @@
-h1{
+nav{
+    padding: 10px;
+    background-color: #3F72AF;
+}
+
+nav .col-1 {
+    display: flex;
+    justify-content: center;
+}
+
+nav input[type=search]{
+    width: 70%;
+}
+
+nav .col-4 {
+    display: flex;
+    justify-content: space-around;
+}
+
+nav a{
+    color: aliceblue;
+    text-decoration: none;
+}
+
+nav a:hover{
+    color: rgb(155, 197, 235);
+    text-decoration: underline ;
+}
+
+#mainForm h1{
     margin-top: 20px;
     text-align: center;
 }
-.container{
+#mainForm {
     text-align: center;
     display: flex;
     justify-content: center;
@@ -11,16 +40,16 @@ h1{
     width: 25em;
 }
 
-form{
+#mainForm form{
     padding-left: 25px;
     padding-right: 25px;
 }
 
-label{
+#mainForm label{
     display: block;
     text-align: left;
 }
-.buttons{
+#mainForm .buttons{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -29,7 +58,7 @@ label{
     cursor: pointer;
 }
 
-input{
+#mainForm form input{
     display: flex;
     margin-bottom: 10px;
     margin-top: 7px ;
@@ -37,12 +66,12 @@ input{
     transition: 300ms;
 }
 
-form div:nth-of-type(1n):hover{
+#mainForm form div:nth-of-type(1n):hover{
     box-shadow: 0 0.5em 0.5em -0.4e;
     transform: translateY(-0.25em);
 }
 
-form div:last-child:hover{
+#mainForm form div:last-child:hover{
     box-shadow: none;
     transform: none;
 }
