--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -12,7 +12,26 @@
 </head>
 
 <body>
-    <div class="container">
+
+    <nav class="container-fluid">
+        <div class="row">
+            <div class="col-1">
+                <a href="/">ELearn</a>
+            </div>
+            <div class="col-7">
+                <input type="search" placeholder="Search" aria-label="Search">
+                <button type="submit">Search</button>
+            </div>
+            <div class="col-4">
+                <a href="/">Home</a>
+                <a href="courses">Courses</a>
+                <a href="signin">Sign In</a>
+                <a href="register">Register</a>
+            </div>
+        </div>
+    </nav>
+
+    <div id="mainForm" class="container">
         <div class="row">
             <div class="col-12">
                 <h1>Login</h1>
