--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,27 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="index.css">
     <title>Online Learning Platform</title>
 </head>
 
 <body>
-    <div id="mainNav" class="fixed-top">
-        <div class="container">
-            <div class="row">
-                <div class="col-3"></div>
-                <div class="col-6">
-                    <nav class="navbar d-flex">
-                        <a href="home">Home</a>
-                        <a href="courses">Courses</a>
-                        <a href="register">Register</a>
-                        <a href="signin">Sign In</a>
-                    </nav>
-                </div>
+    <nav class="container-fluid">
+        <div class="row">
+            <div class="col-1">
+                <a href="/">ELearn</a>
+            </div>
+            <div class="col-7">
+                <input type="search" placeholder="Search" aria-label="Search">
+                <button type="submit">Search</button>
+            </div>
+            <div class="col-4">
+                <a href="/">Home</a>
+                <a href="courses">Courses</a>
+                <a href="signin">Sign In</a>
+                <a href="register">Register</a>
             </div>
         </div>
-
-    </div>
+    </nav>
 
     <header>
         <h1>Online Learning Platform</h1>
