--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,12 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../register.css">
+    <link rel="stylesheet" href="register.css">
+    <script src="register.js"></script>
     <title>Register</title>
 </head>
 
 <body>
-    <div class="container">
+    <nav class="container-fluid">
+        <div class="row">
+            <div class="col-1">
+                <a href="/">ELearn</a>
+            </div>
+            <div class="col-7">
+                <input type="search" placeholder="Search" aria-label="Search">
+                <button type="submit">Search</button>
+            </div>
+            <div class="col-4">
+                <a href="/">Home</a>
+                <a href="courses">Courses</a>
+                <a href="signin">Sign In</a>
+                <a href="register">Register</a>
+            </div>
+        </div>
+    </nav>
+
+    <div id="mainForm" class="container">
         <div class="row">
             <div class="col-12">
                 <h1>Register</h1>
@@ -42,7 +61,6 @@
             </div>
         </div>
     </div>
-    <script src="../register.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
