--- a/public/index.css
+++ b/public/index.css
@@ -58,3 +58,13 @@ section{
     max-width: 100%;
     max-height: 90%;
 }
+
+form .card {
+    margin: 20px;
+    padding: 5px;
+}
+
+#allCourses{
+    margin-left: auto;
+    margin-right: auto;
+}
