--- a/views/coursedetails.ejs
+++ b/views/coursedetails.ejs
@@ -7,40 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../register.css">
-    <title>Login</title>
+    <link rel="stylesheet" href="/details.css">
+    <title>
+        <%=course.title%>
+    </title>
 </head>
 
 <body>
     <%- include('../partials/navbar') %>
 
-        <div id="mainForm" class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h1>Login</h1>
-                    <hr>
-                    <form action="#" name="login" onsubmit="return validateForm()">
-
-                        <div>
-                            <label for="email">Email</label>
-                            <input type="email" name="email" id="email">
-                        </div>
-
-                        <div>
-                            <label for="password">Password</label>
-                            <input type="password" name="password" id="password">
-                        </div>
-                        <div class="buttons">
-                            <button class="btn btn-primary" type="submit">Submit</button>
-                            <button class="btn btn-danger" type="reset">Reset</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
+        <div>
+            <h1>
+                <%= course.title %>
+            </h1>
         </div>
-
-        <script src="../signin.js"></script>
-
+        <div>
+            <%= course.duration %>
+        </div>
+        <div>
+            <h2>
+                <%= course.description %>
+            </h2>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
