--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -12,58 +12,42 @@
 </head>
 
 <body>
-    <nav class="container-fluid">
-        <div class="row">
-            <div class="col-1">
-                <a href="/">ELearn</a>
-            </div>
-            <div class="col-7">
-                <input type="search" placeholder="Search" aria-label="Search">
-                <button type="submit">Search</button>
-            </div>
-            <div class="col-4">
-                <a href="/">Home</a>
-                <a href="courses">Courses</a>
-                <a href="signin">Sign In</a>
-                <a href="register">Register</a>
-            </div>
-        </div>
-    </nav>
-    <% for(let course of courses){ %>
-        <div class="courses">
-            <form action="#">
-                <div class="card" style="width: 18rem;">
-                    <img src="https://images.unsplash.com/photo-1641038624074-25a1e8fabfc3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDN8Ym84alFLVGFFMFl8fGVufDB8fHx8&auto=format&fit=crop&w=600&q=60"
-                        class="card-img-top" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            Title <%= course.title %>
-                        </h5>
-                        <p class="card-text">
-                            Description <%= course.description %>
-                        </p>
+    <%- include('../partials/navbar') %>
+        <% for(let course of courses){ %>
+            <div class="courses">
+                <form action="#">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://images.unsplash.com/photo-1641038624074-25a1e8fabfc3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDN8Ym84alFLVGFFMFl8fGVufDB8fHx8&auto=format&fit=crop&w=600&q=60"
+                            class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                Title <%= course.title %>
+                            </h5>
+                            <p class="card-text">
+                                Description <%= course.description %>
+                            </p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">
+                                Duration <%= course.duration %>
+                            </li>
+                        </ul>
+                        <div class="card-body">
+                            <a href="/courses/<%=course.id%>" class="btn btn-primary">View Course</a>
+                        </div>
                     </div>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">
-                            Duration <%= course.duration %>
-                        </li>
-                    </ul>
-                    <div class="card-body">
-                        <button class="btn btn-primary">Register</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-        <% } %>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-                integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-                crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-                integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-                crossorigin="anonymous"></script>
+                </form>
+            </div>
+            <% } %>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+                    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+                    crossorigin="anonymous"></script>
+                <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+                    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+                    crossorigin="anonymous"></script>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+                    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+                    crossorigin="anonymous"></script>
 </body>
 
 </html>
