--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,76 +12,128 @@
 </head>
 
 <body>
-    <nav class="container-fluid">
-        <div class="row">
-            <div class="col-1">
-                <a href="/">ELearn</a>
-            </div>
-            <div class="col-7">
-                <input type="search" placeholder="Search" aria-label="Search">
-                <button type="submit">Search</button>
-            </div>
-            <div class="col-4">
-                <a href="/">Home</a>
-                <a href="courses">Courses</a>
-                <a href="signin">Sign In</a>
-                <a href="register">Register</a>
-            </div>
-        </div>
-    </nav>
+    <%- include('../partials/navbar') %>
 
-    <header>
-        <h1>Online Learning Platform</h1>
-    </header>
-
-    <section>
+        <header>
+            <h1>Online Learning Platform</h1>
+        </header>
         <div class="container">
-            <div class="row">
-                <div class="col-5">
-                    <img src="https://images.unsplash.com/photo-1513258496099-48168024aec0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8bGVhcm5pbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"
-                        alt="">
-                </div>
-
-                <div class="col-2"></div>
-
-                <div class="col-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi sit iusto aperiam veniam recusandae,
-                    incidunt, doloremque quibusdam eos explicabo quos fuga eius inventore dignissimos magni beatae!
-                    Magni,
-                    blanditiis. Saepe, esse?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi mollitia cumque, quo, officia
-                    praesentium autem magnam deserunt, quia ratione quam facere eligendi earum vel accusantium ex
-                    corrupti doloremque incidunt sit!
-                    Saepe impedit sed voluptate corrupti necessitatibus quasi unde quis. Quod obcaecati expedita porro?
-                    Explicabo animi commodi minus ratione quia a iusto facilis aut reiciendis accusamus, maxime
-                    voluptatibus voluptate, dolore magni?
-                    Cum delectus, similique id impedit mollitia sunt dolore, facere quos earum fuga harum debitis
-                    nesciunt pariatur doloremque ad non eos laboriosam minus vitae magnam quo quia excepturi! Beatae,
-                    inventore repellendus!
-                    Quis, autem possimus soluta earum qui, iusto accusamus voluptates commodi assumenda sequi distinctio
-                    facere? Repellat voluptates dolorum quaerat, natus laudantium possimus molestias rerum odio et
-                    voluptatem, sapiente sed exercitationem dicta?
-                    Omnis nihil tenetur et quisquam! Amet mollitia dolorem ipsam qui, architecto reprehenderit error
-                    iure minus alias similique recusandae ea excepturi libero asperiores! Labore, maxime? Minus
-                    distinctio exercitationem odio fugit corrupti.
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="https://images.unsplash.com/photo-1546410531-bb4caa6b424d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8bGVhcm5pbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"
+                            alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://images.unsplash.com/photo-1513258496099-48168024aec0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8bGVhcm5pbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"
+                            alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://media.istockphoto.com/photos/young-african-american-businesswoman-at-home-office-working-late-picture-id1281862639?b=1&k=20&m=1281862639&s=170667a&w=0&h=ZsIkwQhDEX-z3QbXiptYtyLk-vgZo3Yq-psJry7CW1c="
+                            alt="...">
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
 
-    <footer class="sticky-bottom">
-        <p>&copy; Online Learning Platform</p>
-    </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
+        <div class="container" id="allCourses">
+            <div class="row">
+                <div class="col">
+                    <form action="#">
+                        <div class="card" style="width: 18rem;">
+                            <img src="https://images.unsplash.com/photo-1641038624074-25a1e8fabfc3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDN8Ym84alFLVGFFMFl8fGVufDB8fHx8&auto=format&fit=crop&w=600&q=60"
+                                class="card-img-top" alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Demo
+                                </h5>
+                                <p class="card-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, qui nulla
+                                    exercitationem dolorum sunt accusamus alias id cum vero veritatis libero modi
+                                    molestias nisi mollitia aliquid iste assumenda, quaerat reprehenderit.
+                                </p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    Duration 15hrs
+                                </li>
+                            </ul>
+                            <div class="card-body">
+                                <a href="#" class="btn btn-primary">View Course</a>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="col">
+                    <form action="#">
+                        <div class="card" style="width: 18rem;">
+                            <img src="https://images.unsplash.com/photo-1641038624074-25a1e8fabfc3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDN8Ym84alFLVGFFMFl8fGVufDB8fHx8&auto=format&fit=crop&w=600&q=60"
+                                class="card-img-top" alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Demo
+                                </h5>
+                                <p class="card-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, qui nulla
+                                    exercitationem dolorum sunt accusamus alias id cum vero veritatis libero modi
+                                    molestias nisi mollitia aliquid iste assumenda, quaerat reprehenderit.
+                                </p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    Duration 15hrs
+                                </li>
+                            </ul>
+                            <div class="card-body">
+                                <a href="#" class="btn btn-primary">View Course</a>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="col">
+                    <form action="#">
+                        <div class="card" style="width: 18rem;">
+                            <img src="https://images.unsplash.com/photo-1641038624074-25a1e8fabfc3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDN8Ym84alFLVGFFMFl8fGVufDB8fHx8&auto=format&fit=crop&w=600&q=60"
+                                class="card-img-top" alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Demo
+                                </h5>
+                                <p class="card-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, qui nulla
+                                    exercitationem dolorum sunt accusamus alias id cum vero veritatis libero modi
+                                    molestias nisi mollitia aliquid iste assumenda, quaerat reprehenderit.
+                                </p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    Duration 15hrs
+                                </li>
+                            </ul>
+                            <div class="card-body">
+                                <a href="#" class="btn btn-primary">View Course</a>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <footer class="footer sticky-bottom">
+            <p>&copy;Elearn 2022</p>
+        </footer>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+            integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+            integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+            crossorigin="anonymous"></script>
+
 </body>
 
 </html>
