--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -13,6 +13,9 @@
 
 <body>
     <%- include('../partials/navbar') %>
+        <div>
+            <h1>What To Learn</h1>
+        </div>
         <% for(let course of courses){ %>
             <div class="courses">
                 <form action="#">
