--- a/views/coursedetails.ejs
+++ b/views/coursedetails.ejs
@@ -14,21 +14,48 @@
 </head>
 
 <body>
-    <!-- <%- include('../partials/navbar') %> -->
+    <nav class="container-fluid">
+        <div class="row">
+            <div class="col-1">
+                <a href="/">ELearn</a>
+            </div>
+            <div class="col-7">
+                <input type="search" placeholder="Search" aria-label="Search">
+                <button type="submit">Search</button>
+            </div>
+            <div class="col-4">
+                <a href="/">Home</a>
+                <a href="\courses">Courses</a>
+                <a href="\signin">Sign In</a>
+                <a href="\register">Register</a>
+            </div>
+        </div>
+    </nav>
+    <div class="jumbotron jumbotron-fluid" id="jumbo">
+        <div class="container">
+            <h1 class="display-4">
+                <%= course.title %>
+            </h1>
+            <h4>
+                <%= course.duration %>
+            </h4>
+            <p class="lead">
+                <%= course.description %>
+            </p>
+            <p>
+                Rating:
+            </p>
+            <p>
+                Created By:
+            </p>
+        </div>
+    </div>
+    <div>
+        <form class="d-inline" action="/courses/<%= course._id %>?_method=DELETE" method="Post">
+            <button class="btn btn-danger">Delete</button>
+        </form>
+    </div>
 
-    <div>
-        <h1>
-            <%= course.title %>
-        </h1>
-    </div>
-    <div>
-        <%= course.duration %>
-    </div>
-    <div>
-        <h2>
-            <%= course.description %>
-        </h2>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
