--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,11 @@
             </div>
         </div>
 
-
+        <div>
+            <h2 class="mt-4">
+                <center>Our Top Courses</center>
+            </h2>
+        </div>
         <div class="container" id="allCourses">
             <div class="row">
                 <div class="col">
