--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -24,10 +24,10 @@
                             class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">
-                                Title <%= course.title %>
+                                <%= course.title %>
                             </h5>
                             <p class="card-text">
-                                Description <%= course.description %>
+                                <%= course.description %>
                             </p>
                         </div>
                         <ul class="list-group list-group-flush">
