--- a/views/coursedetails.ejs
+++ b/views/coursedetails.ejs
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/details.css">
@@ -36,19 +39,27 @@
             <h1 class="display-4">
                 <%= course.title %>
             </h1>
-            <h4>
-                <%= course.duration %>
-            </h4>
-            <p class="lead">
+            <h5>
                 <%= course.description %>
+            </h5>
+            <p>
+                Rating: <%= course.rating %>/5 
             </p>
             <p>
-                Rating:
+                Created By: <span><%= course.author %></span>
             </p>
             <p>
-                Created By:
+                Duration: <%= course.duration %>
             </p>
         </div>
+    </div>
+    <div class="title">
+        <center>
+            <h3><%= course.title %></h3>
+        </center>
+    </div>
+    <div class="video-container">
+        <%- course.link  %> 
     </div>
     <div>
         <form class="d-inline" action="/courses/<%= course._id %>?_method=DELETE" method="Post">
