--- a/views/coursedetails.ejs
+++ b/views/coursedetails.ejs
@@ -17,65 +17,75 @@
 </head>
 
 <body>
-    <nav class="container-fluid">
-        <div class="row">
-            <div class="col-1">
-                <a href="/">ELearn</a>
+    <%- include('../partials/flash') %>
+        <nav class="container-fluid">
+            <div class="row">
+                <div class="col-1">
+                    <a href="/">ELearn</a>
+                </div>
+                <div class="col-7">
+                    <input type="search" placeholder="Search" aria-label="Search">
+                    <button type="submit">Search</button>
+                </div>
+                <div class="col-4">
+                    <a href="/">Home</a>
+                    <a href="\courses">Courses</a>
+                    <% if(!currentUser) {%>
+                        <a href="\signin">Sign In</a>
+                        <a href="\register">Register</a>
+                        <% } else{ %>
+                            <a href="\logout">Logout</a>
+                            <%=currentUser.username%>
+                                <% } %>
+                </div>
             </div>
-            <div class="col-7">
-                <input type="search" placeholder="Search" aria-label="Search">
-                <button type="submit">Search</button>
-            </div>
-            <div class="col-4">
-                <a href="/">Home</a>
-                <a href="\courses">Courses</a>
-                <a href="\signin">Sign In</a>
-                <a href="\register">Register</a>
+        </nav>
+        <div class="jumbotron jumbotron-fluid" id="jumbo">
+            <div class="container">
+                <h1 class="display-4">
+                    <%= course.title %>
+                </h1>
+                <h5>
+                    <%= course.description %>
+                </h5>
+                <p>
+                    Rating: <%= course.rating %>/5
+                </p>
+                <p>
+                    Created By: <span>
+                        <%= course.author %>
+                    </span>
+                </p>
+                <p>
+                    Duration: <%= course.duration %>
+                </p>
             </div>
         </div>
-    </nav>
-    <div class="jumbotron jumbotron-fluid" id="jumbo">
-        <div class="container">
-            <h1 class="display-4">
-                <%= course.title %>
-            </h1>
-            <h5>
-                <%= course.description %>
-            </h5>
-            <p>
-                Rating: <%= course.rating %>/5 
-            </p>
-            <p>
-                Created By: <span><%= course.author %></span>
-            </p>
-            <p>
-                Duration: <%= course.duration %>
-            </p>
+        <div class="title">
+            <center>
+                <h3>
+                    <%= course.title %>
+                </h3>
+            </center>
         </div>
-    </div>
-    <div class="title">
-        <center>
-            <h3><%= course.title %></h3>
-        </center>
-    </div>
-    <div class="video-container">
-        <%- course.link  %> 
-    </div>
-    <div>
-        <form class="d-inline" action="/courses/<%= course._id %>?_method=DELETE" method="Post">
-            <button class="btn btn-danger">Delete</button>
-        </form>
-    </div>
+        <div class="video-container">
+            <%- course.link %>
+        </div>
+        <div>
+            <form class="d-inline" action="/courses/<%= course._id %>?_method=DELETE" method="Post">
+                <button class="btn btn-danger">Delete</button>
+            </form>
+        </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+            integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+            integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
