--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,22 +20,18 @@
                 <div class="col-12">
                     <h1>Register</h1>
                     <hr>
-                    <form action="#" name="login" onsubmit="return validateForm()">
-                        <div>
-                            <label for="name">Name</label>
-                            <input type="text" name="name" id="name">
-                        </div>
+                    <form action="/register" method="POST" name="login">
                         <div>
                             <label for="email">Email</label>
-                            <input type="email" name="email" id="email">
+                            <input type="email" name="email" id="email" required>
                         </div>
                         <div>
                             <label for="username">Username</label>
-                            <input type="text" name="username" id="username">
+                            <input type="text" name="username" id="username" required>
                         </div>
                         <div>
                             <label for="password">Password</label>
-                            <input type="password" name="password" id="password">
+                            <input type="password" name="password" id="password" required>
                         </div>
                         <div class="buttons">
                             <button class="btn btn-primary" type="submit">Submit</button>
