--- a/views/addcourse.ejs
+++ b/views/addcourse.ejs
@@ -30,6 +30,18 @@
                         <label for="duration">Course Duration</label>
                         <input type="text" id="duration" name="newCourse[duration]" required>
                     </div>
+                    <div>
+                        <label for="author">Course Author</label>
+                        <input type="text" id="author" name="newCourse[author]" required>
+                    </div>
+                    <div>
+                        <label for="rating">Course Rating</label>
+                        <input type="text" id="rating" name="newCourse[rating]" required>
+                    </div>
+                    <div>
+                        <label for="link">Course link</label>
+                        <input type="text" id="link" name="newCourse[link]" required>
+                    </div>
                     <div class="buttons">
                         <button class="btn btn-primary" type="submit">Submit</button>
                         <button class="btn btn-danger" type="reset">Reset</button>
