--- a/public/index.css
+++ b/public/index.css
@@ -1,12 +1,26 @@
 body{
     width: 100%;
     margin-bottom: 0px;
+    background-image: url("https://images.unsplash.com/photo-1582738411706-bfc8e691d1c2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8d2hpdGUlMjBncmFkaWVudHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 h1{
     text-align: center;
+    font-size: 5rem;
+    margin-top: 1.5rem;
+    margin-bottom: 2.5rem;
+    background: -webkit-linear-gradient(#000428, #004e92);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+h2{
+    text-align: center;
     color: black;
-    margin-top: 1.5em;
+    margin-top: 1.2em;
     margin-bottom: 1em;
+    font-size: 2.5rem;
 }
 
 nav{
@@ -32,6 +46,7 @@ a{
     color: aliceblue;
     text-decoration: none;
 }
+
 
 a:hover{
     color: rgb(155, 197, 235);
