--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,31 +15,39 @@
     <%- include('../partials/navbar') %>
 
         <header>
-            <h1>Online Learning Platform</h1>
+            <h1>Welcome to E-Learn</h1>
         </header>
         <div class="container">
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="https://images.unsplash.com/photo-1546410531-bb4caa6b424d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8bGVhcm5pbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"
-                            alt="...">
+            <div class="row">
+                <div class="col-6">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="https://images.unsplash.com/photo-1546410531-bb4caa6b424d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8bGVhcm5pbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"
+                                    alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://images.unsplash.com/photo-1513258496099-48168024aec0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8bGVhcm5pbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"
+                                    alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://media.istockphoto.com/photos/young-african-american-businesswoman-at-home-office-working-late-picture-id1281862639?b=1&k=20&m=1281862639&s=170667a&w=0&h=ZsIkwQhDEX-z3QbXiptYtyLk-vgZo3Yq-psJry7CW1c="
+                                    alt="...">
+                            </div>
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="https://images.unsplash.com/photo-1513258496099-48168024aec0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8bGVhcm5pbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"
-                            alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://media.istockphoto.com/photos/young-african-american-businesswoman-at-home-office-working-late-picture-id1281862639?b=1&k=20&m=1281862639&s=170667a&w=0&h=ZsIkwQhDEX-z3QbXiptYtyLk-vgZo3Yq-psJry7CW1c="
-                            alt="...">
-                    </div>
+                </div>
+                <div class="col-6">
+                    <h2>You can view various courses to learn from.</h2>
+                    <h2>Start Learning Today!</h2>
                 </div>
             </div>
         </div>
 
         <div>
-            <h2 class="mt-4">
+            <h3 class="mt-4">
                 <center>Our Top Courses</center>
-            </h2>
+            </h3>
         </div>
         <div class="container" id="allCourses">
             <div class="row">
