course detail navbar changes

--- a/public/details.css
+++ b/public/details.css
@@ -28,7 +28,7 @@ a{
 }
 
 #jumbo {
-    background-color: blueviolet;
+    background-color: #14213d;
     padding-top: 10px;
     padding-bottom: 10px;
 }
