--- a/views/addcourse.ejs
+++ b/views/addcourse.ejs
@@ -39,7 +39,7 @@
                         <input type="text" id="rating" name="newCourse[rating]" required>
                     </div>
                     <div>
-                        <label for="link">Course link</label>
+                        <label for="link">Course Playlist ID</label>
                         <input type="text" id="link" name="newCourse[link]" required>
                     </div>
                     <div>
