--- a/partials/navbar.ejs
+++ b/partials/navbar.ejs
@@ -1,38 +1,39 @@
 <%- include('./flash') %>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">ELearn</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">ELearn</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
+                aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0 mx-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="courses">Courses</a>
-                </li>
-                <% if(!currentUser) {%>
-                    <li>
-                        <a class="nav-link" href="signin">Sign In</a>
+            <div class="collapse navbar-collapse" id="navbarToggler">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0 mx-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
                     </li>
-                    <li>
-                        <a class="nav-link" href="register">Register</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="courses">Courses</a>
                     </li>
-
-                    <% } else{ %>
+                    <% if(!currentUser) {%>
                         <li>
-                            <a class="nav-link" href="logout">Logout</a>
+                            <a class="nav-link" href="signin">Sign In</a>
                         </li>
                         <li>
-                            <a class="nav-link text-muted text-decoration-none" href="#">
-                                <%=currentUser.username%>
-                            </a>
+                            <a class="nav-link" href="register">Register</a>
                         </li>
-                        <% } %>
-            </ul>
+
+                        <% } else{ %>
+                            <li>
+                                <a class="nav-link" href="logout">Logout</a>
+                            </li>
+                            <li>
+                                <a class="nav-link text-muted text-decoration-none" href="#">
+                                    <%=currentUser.username%>
+                                </a>
+                            </li>
+                            <% } %>
+                </ul>
+            </div>
         </div>
     </nav>
