--- a/views/coursedetails.ejs
+++ b/views/coursedetails.ejs
@@ -18,7 +18,45 @@
 
 <body>
     <%- include('../partials/flash') %>
-        <nav class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">ELearn</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
+                aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarToggler">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0 mx-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="\courses">Courses</a>
+                    </li>
+                    <% if(!currentUser) {%>
+                        <li>
+                            <a class="nav-link" href="\signin">Sign In</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="\register">Register</a>
+                        </li>
+
+                        <% } else{ %>
+                            <li>
+                                <a class="nav-link" href="\logout">Logout</a>
+                            </li>
+                            <li>
+                                <a class="nav-link text-muted text-decoration-none" href="#">
+                                    <%=currentUser.username%>
+                                </a>
+                            </li>
+                            <% } %>
+                </ul>
+            </div>
+        </div>
+    </nav>
+        <!-- <nav class="container-fluid">
             <div class="row">
                 <div class="col-1">
                     <a href="/">ELearn</a>
@@ -39,7 +77,7 @@
                                 <% } %>
                 </div>
             </div>
-        </nav>
+        </nav> -->
         <div class="jumbotron jumbotron-fluid" id="jumbo">
             <div class="container">
                 <h1 class="display-4">
@@ -69,7 +107,7 @@
             </center>
         </div>
         <div class="video-container">
-            <iframe width="560" height="315" src="<%=course.link%>" title="YouTube video player" frameborder="0"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=<%=course.link%>" title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
             </iframe>
