--- a/public/index.css
+++ b/public/index.css
@@ -8,11 +8,11 @@ body{
 h1{
     text-align: center;
     font-size: 5rem;
-    margin-top: 1.5rem;
-    margin-bottom: 2.5rem;
-    background: -webkit-linear-gradient(#000428, #004e92);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    padding-top: 2.5rem;
+    padding-bottom: 4.5rem;
+    margin-bottom: 1rem;
+    color: #f2f4f3;
+    background-color: #22333b;
 }
 
 h2{
