--- a/views/coursedetails.ejs
+++ b/views/coursedetails.ejs
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Open+Sans:wght@700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/details.css">
     <title>
         <%=course.title%>
@@ -33,28 +34,37 @@
                         <li class="nav-item">
                             <a class="nav-link" href="\courses">Courses</a>
                         </li>
+
                         <% if(!currentUser) {%>
-                            <li>
-                                <a class="nav-link" href="signin" style="margin-left: 65vw;">Sign In</a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="\signin">Sign In</a>
                             </li>
-                            <li>
-                                <a class="nav-link" href="register" style="margin-right: 0.5vw;">Register</a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="\register">Register</a>
                             </li>
 
                             <% } else{ %>
-                                <li style="margin-left: 65vw;">
-                                    <a class="nav-link" href="logout">Logout</a>
-                                </li>
-                                <li style="margin-right: 0.5vw;">
-                                    <a class="nav-link text-muted text-decoration-none" href="#">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle text-decoration-none"
+                                        id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown"
+                                        aria-expanded="false">
+
+                                        <span>&#128100;</span>
                                         <%=currentUser.username%>
                                     </a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                                        <li>
+                                            <a class="dropdown-item" href="/logout">Logout</a>
+                                        </li>
+                                    </ul>
                                 </li>
                                 <% } %>
+
                     </ul>
                 </div>
             </div>
         </nav>
+
         <div class="jumbotron jumbotron-fluid" id="jumbo">
             <div class="container">
                 <h1 class="display-4">
@@ -98,7 +108,72 @@
             </form>
         </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <footer class="bg-dark text-center text-white">
+            <!-- Grid container -->
+            <div class="container p-4">
+                <!-- Section: Social media -->
+                <!-- <section class="mb-4"> -->
+                <!-- Facebook -->
+                <!-- <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" -->
+                <!-- role="button"><i class="fab fa-facebook-f"></i></a> -->
+
+                <!-- Twitter -->
+                <!-- <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!" -->
+                <!-- role="button"><i class="fab fa-twitter"></i></a> -->
+
+                <!-- Google -->
+                <!-- <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39" href="#!" -->
+                <!-- role="button"><i class="fab fa-google"></i></a> -->
+
+                <!-- Instagram -->
+                <!-- <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!" -->
+                <!-- role="button"><i class="fab fa-instagram"></i></a> -->
+
+                <!-- Linkedin -->
+                <!-- <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="#!" -->
+                <!-- role="button"><i class="fab fa-linkedin-in"></i></a> -->
+                <!-- Github -->
+                <!-- <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="#!" -->
+                <!-- role="button"><i class="fab fa-github"></i></a> -->
+                <!-- </section> -->
+                <!-- Section: Social media -->
+
+                <!-- Section: Links -->
+                <section class="container-fluid">
+                    <!--Grid row-->
+                    <div class="row">
+                        <!--Grid column-->
+                        <div class="col mb-4 mb-md-0">
+                            <h5 class="text-uppercase">Visit the pages</h5>
+
+                            <ul class="list-unstyled mb-0">
+                                <li>
+                                    <a href="/" class="text-white">Home</a>
+                                </li>
+                                <li>
+                                    <a href="/courses" class="text-white">Courses</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!--Grid column-->
+
+                    </div>
+                    <!--Grid row-->
+                </section>
+                <!-- Section: Links -->
+            </div>
+
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                © 2022 Copyright:
+                <a class="text-white" href="/">E-Learn</a>
+            </div>
+
+        </footer>
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
