--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="courses.css">
+    <script>import { Button } from 'mdb-ui-kit';</script>
     <title>Courses</title>
 </head>
 
@@ -22,7 +24,12 @@
                         <img src="<%= course.image %> " class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">
-                                <%= course.title %>
+                                <% if (course.title.length> 30) {%>
+                                    <%course.title=course.title.substring(0, 30) + "..." ;%>
+                                        <%= course.title %>
+                                            <%}else{%>
+                                                <%= course.title %>
+                                                    <% } %>
                             </h5>
                             <p class="card-text">
                                 <% if (course.description.length> 100) {%>
@@ -45,8 +52,11 @@
                 </form>
             </div>
             <% } %>
+                <%- include('../partials/footer') %>
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+                        crossorigin="anonymous"></script>
 
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
