--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
-    <title>Online Learning Platform</title>
+    <title>E Learn - An Online Learning Platform</title>
 </head>
 
 <body>
     <%- include('../partials/navbar') %>
 
         <header>
-            <h1>Welcome to E-Learn</h1>
+            <h1>E Learn-Learning Made Easier</h1>
         </header>
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-md-12 col-lg-6 order-md-0 col-sm-12 ">
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -30,13 +31,14 @@
                                     alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="https://media.istockphoto.com/photos/young-african-american-businesswoman-at-home-office-working-late-picture-id1281862639?b=1&k=20&m=1281862639&s=170667a&w=0&h=ZsIkwQhDEX-z3QbXiptYtyLk-vgZo3Yq-psJry7CW1c="
+                                <img src="https://images.unsplash.com/photo-1610484826967-09c5720778c7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8b25saW5lJTIwbGVhcm5pbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"
                                     alt="...">
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-md-12 col-lg-6 order-md-1 col-sm-12 ">
+                    <h2>Welcome to E-Learn</h2>
                     <h2>You can view various courses to learn from.</h2>
                     <h2>Start Learning Today!</h2>
                 </div>
@@ -90,11 +92,12 @@
             </div>
         </div>
 
-        <footer class="footer sticky-bottom bg-dark">
-            <p>&copy;Elearn 2022</p>
-        </footer>
-        
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <%- include('../partials/footer') %>
+
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+                crossorigin="anonymous">
+                </script>
 </body>
 
 </html>
